SCRUM-37: Implemented adding users to organization
